# toka

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  cat.s  rules.md  run_lldb.py  test.tk  test_adt.tk  test_err.tk  test_impl.tk  test_io.txt  test_morphology.tk  test_trait.tk  test_trait_default.tk  tokaForAI.md  walkthrough_std_lib.md
bench/: fib.cpp  fib.tk  linked_list.cpp  linked_list.tk  run.sh
demos/: cat.tk  char_freq.tk  termios_raw.tk  test_io.txt  thread_example.tk  word_freq.tk
docker/linux/: Dockerfile
docs/: guide.md  guide_zh.md  syntax_zh.md
src/: CMakeLists.txt  DiagnosticEngine.cpp  Type.cpp  main.cpp
src/Basic/: SourceManager.cpp
src/CodeGen/: CodeGen.cpp  CodeGen.cpp.single.bak  CodeGen_Decl.cpp  CodeGen_Expr.cpp  CodeGen_Memory.cpp  CodeGen_Stmt.cpp  toka_resection_final.py-
src/CodeGen/src/CodeGen/: CodeGen_Decl.cpp  CodeGen_Memory.cpp
src/Lexer/: Lexer.cpp
src/Parser/: Parser.cpp  Parser_Decl.cpp  Parser_Expr.cpp  Parser_Stmt.cpp
src/Sema/: Sema.cpp  Sema_Expr.cpp  Sema_Stmt.cpp  Sema_Template.cpp  Sema_Type.cpp
tests/: test.tk  test_adt.tk  test_borrow_ok.tk  test_impl.tk  test_loop_full.tk  test_morphology.tk  test_noshared.tk  test_null_is.tk  test_parser_updates.tk  test_sema_move_ok.tk  test_sema_strict.tk  test_sema_strict_ok.tk  test_small.tk  test_stress_control_flow.tk  test_trait.tk  test_trait_default.tk  test_val_is.tk
tokac/: main.tk
tool/: check_braces.py  clean_temp_files.sh  test_fail.sh  test_pass.sh  test_reject.sh  test_single.sh  test_verify_fail.py  tokac.sh
(+334 files in other folders)
